# app-cloner

./: .gitignore  README.md  full_logcat.txt  pubspec.yaml  recent_clone_error.txt  recent_crash.txt  recent_error_logs.txt  recent_launch_errors.txt  recent_logs.txt  recent_logs_again.txt  recent_startup_errors.txt  recent_white_screen.txt
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  binder_intercept.cpp  io_redirect.cpp  memory_manager.cpp  proc_maps_filter.cpp  property_redirect.cpp
docs/: PLAY_STORE_COMPLIANCE.md  PRIVACY_POLICY.md
docs/api/: bridge_api.md
docs/architecture/: ADR-001-engine-selection.md  ADR-002-flutter-bridge.md
docs/compatibility/: android_version_matrix.md
lib/: app.dart  main.dart
lib/core/constants/: app_constants.dart
lib/core/extensions/: context_extensions.dart
lib/core/router/: app_router.dart
lib/core/theme/: app_theme.dart
lib/core/utils/: logger.dart
lib/features/app_picker/providers/: app_picker_provider.dart
lib/features/clone_detail/providers/: clone_detail_provider.dart
lib/features/dashboard/providers/: dashboard_provider.dart
lib/features/profile_editor/providers/: profile_editor_provider.dart
lib/models/: clone_info.dart  clone_info.freezed.dart  clone_info.g.dart  clone_status.dart  device_profile.dart  device_profile.freezed.dart  device_profile.g.dart
lib/services/: clone_engine_service.dart  clone_event_stream.dart  storage_service.dart
pigeon/: clone_api.dart
test/: widget_test.dart
(+88 files in other folders)
